[gd_scene load_steps=3 format=2]

[ext_resource path="res://Util/SexActivityCreator/SexActivityCreator.gd" type="Script" id=1]
[ext_resource path="res://Util/SexActivityCreator/ActivityActionsList.tscn" type="PackedScene" id=3]

[node name="SexActivityCreator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0

[node name="ActivitySettingsButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_right = 115.0
margin_bottom = 20.0
text = "Activity settings"

[node name="StateAndActionsSettings" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 119.0
margin_right = 247.0
margin_bottom = 20.0
text = "States and actions"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatesActionsList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 672.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/StatesActionsList"]
margin_right = 200.0
margin_bottom = 20.0

[node name="AddStateButton" type="Button" parent="VBoxContainer/HBoxContainer/StatesActionsList/HBoxContainer"]
margin_right = 73.0
margin_bottom = 20.0
text = "Add state"

[node name="StatesList" type="ItemList" parent="VBoxContainer/HBoxContainer/StatesActionsList"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 221.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/StatesActionsList"]
margin_top = 225.0
margin_right = 200.0
margin_bottom = 245.0

[node name="AddDomButton" type="Button" parent="VBoxContainer/HBoxContainer/StatesActionsList/HBoxContainer2"]
margin_right = 115.0
margin_bottom = 20.0
text = "Add Dom action"

[node name="DomActionsList" type="ItemList" parent="VBoxContainer/HBoxContainer/StatesActionsList"]
margin_top = 249.0
margin_right = 200.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/StatesActionsList"]
margin_top = 450.0
margin_right = 200.0
margin_bottom = 470.0

[node name="AddSubButton" type="Button" parent="VBoxContainer/HBoxContainer/StatesActionsList/HBoxContainer3"]
margin_right = 107.0
margin_bottom = 20.0
text = "Add Sub action"

[node name="SubActionsList" type="ItemList" parent="VBoxContainer/HBoxContainer/StatesActionsList"]
margin_top = 474.0
margin_right = 200.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 1280.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 1076.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatePropertiesList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1076.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StateDynamicPropertiestList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/StatePropertiesList"]
margin_right = 1076.0
size_flags_horizontal = 3

[node name="PerTurnActions" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/StatePropertiesList" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 1076.0
margin_bottom = 128.0
labelText = "Every turn actions"

[node name="ActionPropertiesList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 1076.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/ActionPropertiesList"]
margin_right = 1076.0
margin_bottom = 14.0
text = "Editing xxx"

[node name="DynamicPropertiestList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/ActionPropertiesList"]
margin_top = 18.0
margin_right = 1076.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="ConditionsList" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/ActionPropertiesList" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 22.0
margin_right = 1076.0
margin_bottom = 146.0
labelText = "Conditions (And)"

[node name="ActionActionsList" parent="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/ActionPropertiesList" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 150.0
margin_right = 1076.0
margin_bottom = 274.0
labelText = "What happens"

[node name="ActivitySettingsScreen" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 362.0
margin_right = 1280.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActivityPropertiesList" type="VBoxContainer" parent="VBoxContainer/ActivitySettingsScreen"]
margin_right = 1280.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 700.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 41.0
margin_bottom = 20.0
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 45.0
margin_right = 87.0
margin_bottom = 20.0
text = "Load"

[node name="GenerateCodeButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 91.0
margin_right = 198.0
margin_bottom = 20.0
text = "Generate Code"

[node name="WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -544.5
margin_top = -239.5
margin_right = 544.5
margin_bottom = 239.5

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="WindowDialog/VBoxContainer"]
margin_right = 1089.0
margin_bottom = 14.0
text = "Adding something"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog/VBoxContainer"]
margin_top = 18.0
margin_right = 1089.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="WindowDialog/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
text = "ID"

[node name="LineEdit" type="LineEdit" parent="WindowDialog/VBoxContainer/HBoxContainer"]
margin_left = 19.0
margin_right = 1089.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="WindowAddButton" type="Button" parent="WindowDialog/VBoxContainer"]
margin_top = 46.0
margin_right = 1089.0
margin_bottom = 66.0
text = "Add"

[node name="ActionEditingDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -564.0
margin_top = -252.0
margin_right = 564.0
margin_bottom = 252.0

[node name="VBoxContainer" type="VBoxContainer" parent="ActionEditingDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="ActionEditingDialog/VBoxContainer"]
margin_right = 1128.0
margin_bottom = 14.0
text = "Editing XXX"

[node name="ArgsListScroll" type="ScrollContainer" parent="ActionEditingDialog/VBoxContainer"]
margin_top = 18.0
margin_right = 1128.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ArgsList" type="VBoxContainer" parent="ActionEditingDialog/VBoxContainer/ArgsListScroll"]
margin_right = 1128.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ActionEditingDialog/VBoxContainer"]
margin_top = 484.0
margin_right = 1128.0
margin_bottom = 504.0

[node name="ConfirmActionEditButton" type="Button" parent="ActionEditingDialog/VBoxContainer/HBoxContainer"]
margin_right = 62.0
margin_bottom = 20.0
text = "Confirm"

[node name="ExportedCodeDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -453.5
margin_top = -244.5
margin_right = 453.5
margin_bottom = 244.5

[node name="VBoxContainer" type="VBoxContainer" parent="ExportedCodeDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextEdit" type="TextEdit" parent="ExportedCodeDialog/VBoxContainer"]
margin_right = 907.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3
show_line_numbers = true
draw_tabs = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer3/ActivitySettingsButton" to="." method="_on_ActivitySettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/StateAndActionsSettings" to="." method="_on_StateAndActionsSettings_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StatesActionsList/HBoxContainer/AddStateButton" to="." method="_on_AddStateButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/StatesActionsList/StatesList" to="." method="_on_StatesList_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StatesActionsList/HBoxContainer2/AddDomButton" to="." method="_on_AddDomButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/StatesActionsList/DomActionsList" to="." method="_on_DomActionsList_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StatesActionsList/HBoxContainer3/AddSubButton" to="." method="_on_AddSubButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/StatesActionsList/SubActionsList" to="." method="_on_SubActionsList_item_selected"]
[connection signal="onAddButton" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/StatePropertiesList/PerTurnActions" to="." method="_on_PerTurnActions_onAddButton"]
[connection signal="onEditPressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/StatePropertiesList/PerTurnActions" to="." method="_on_PerTurnActions_onEditPressed"]
[connection signal="onAddButton" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/ActionPropertiesList/ConditionsList" to="." method="_on_ConditionsList_onAddButton"]
[connection signal="onEditPressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/ActionPropertiesList/ConditionsList" to="." method="_on_ConditionsList_onEditPressed"]
[connection signal="onAddButton" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/ActionPropertiesList/ActionActionsList" to="." method="_on_ActionActionsList_onAddButton"]
[connection signal="onEditPressed" from="VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/ActionPropertiesList/ActionActionsList" to="." method="_on_ActionActionsList_onEditPressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/GenerateCodeButton" to="." method="_on_GenerateCodeButton_pressed"]
[connection signal="pressed" from="WindowDialog/VBoxContainer/WindowAddButton" to="." method="_on_WindowAddButton_pressed"]
[connection signal="pressed" from="ActionEditingDialog/VBoxContainer/HBoxContainer/ConfirmActionEditButton" to="." method="_on_ConfirmActionEditButton_pressed"]
